--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,13 @@
 .jumbotron h1 {
   font-size: 36px;
 }
-
+.question {
+  text-align: center;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+}
 #programs .btn {
   background-color: rgba(59, 153, 252, .9);
   margin: auto;
@@ -27,7 +33,7 @@
 .programs {
   /*display: none;*/
   background-color: rgba(59, 153, 252, .3);
-  padding: 5px;
+  padding: 10px;
   text-align: justify;
   border-style: dashed;
   border-color: gray;
