add logos to three programs available in results.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 
 .jumbotron h1 {
   font-size: 36px;
+  color: white;
 }
 .question {
   text-align: center;
@@ -39,7 +40,11 @@
   border-color: gray;
   border-radius: 5px;
 }
-
+img {
+  float: left;
+  padding: 10px;
+  height: 100px;
+}
 a {
   color: rgba(59, 153, 252, 1);
   text-decoration: underline;
